separate form js from main js

--- a/public/html/addEntry.html
+++ b/public/html/addEntry.html
@@ -43,6 +43,6 @@
     </div>
     <button type="submit">Submit</button>
   </form>
-  <script src="../js/main.js"></script>
+  <script src="../js/form.js"></script>
 </body>
 </html>
