--- a/public/html/addEntry.html
+++ b/public/html/addEntry.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Nature Journal</h1>
   <button><a href="/">Home</a></button>
-  <form action="/addEntry" method="POST">
+  <form action="/addBird" method="POST">
     <div class="formRow">
       <label for="date">Date</label><br>
       <input type="date" name="date" id="date">
@@ -30,7 +30,7 @@
       <input type="text" name="latinName" placeholder= "Turdus migratorius" id="latinName">
     </div>
     <div class="formRow">
-      <label for="ovbservations">Observations</label><br>
+      <label for="observations">Observations</label><br>
       <textarea id="observations" name="observations" placeholder="This is what I saw..." rows="10"></textarea>
     </div>
     <div class="formRow">
