improved route naming

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Nature Journal</h1>
-  <form action="/addEntry" method="POST">
+  <form action="/entries/addEntry" method="POST">
     <div class="formRow">
       <label for="date">Date</label><br>
       <input type="date" name="date" id="date">
