--- a/public/html/addEntry.html
+++ b/public/html/addEntry.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Nature Journal</h1>
   <button><a href="/">Home</a></button>
-  <form action="/addEntry" method="POST">
+  <form action="/entries/addEntry" method="POST">
     <div class="formRow">
       <label for="date">Date</label><br>
       <input type="date" name="date" id="date">
